tests/baselines/reference/mergedClassInterface.errors.txt
tests/cases/conformance/classes/classDeclarations/file1.ts(11,7): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/file1.ts(13,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/file1.ts(15,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/file1.ts(17,7): error TS2518: Only an ambient class can be merged with an interface.


==== tests/cases/conformance/classes/classDeclarations/file1.ts (4 errors) ====
    
    
    declare class C1 { }
    
    interface C1 { }
    
    interface C2 { }
    
    declare class C2 { }
    
    class C3 { } // error -- cannot merge non-ambient class and interface
          ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    interface C3 { } // error -- cannot merge non-ambient class and interface
              ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    interface C4 { } // error -- cannot merge non-ambient class and interface
              ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    class C4 { } // error -- cannot merge non-ambient class and interface
          ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    interface C5 {
        x1: number;
    }
    
    declare class C5 {
        x2: number;
    }
    
    interface C5 {
        x3: number;
    }
    
    interface C5 {
        x4: number;
    }
    
    // checks if properties actually were merged
    var c5 : C5;
    c5.x1;
    c5.x2;
    c5.x3;
    c5.x4;
    
==== tests/cases/conformance/classes/classDeclarations/file2.ts (0 errors) ====
    
    declare class C6 { }
    
    interface C7 { }
    
==== tests/cases/conformance/classes/classDeclarations/file3.ts (0 errors) ====
    
    interface C6 { }
    
    declare class C7 { }